# rlottie

./: CMakeLists.txt  meson_options.txt
src/lottie/zip/: zip.cpp
src/vector/: CMakeLists.txt
src/vector/text/: CMakeLists.txt  vtextshaper.cpp
vs2019/: config.h
